--- a/list.html
+++ b/list.html
@@ -4,21 +4,19 @@
 			<ul>
 		    {{#each this.lists}}
 				<li class="back{{this.color}}"><a href="listDetail.html?title={{this.name}}&id={{this.id}}" data-context-name="devices" 
-					class="item-link item-content item-content-custom">
+					class="item-link item-content item-content-custom pippop">
 						<div class="item-media">
 							<i class="icon icon-f7"></i>  
 						</div>
 						<div class="item-inner">
 							<div class="item-title">{{this.name}}</div>
-							<div class="item-after-custom item-after-custom">
-								<i class="fa fa-check-square-o fa-2x fa-check-square-not-all-conn" aria-hidden="true"></i>
-							</div>
-						</div>
+						<div class="item-after-custom item-after-custom listLi" id="{{this.id}}">
+								 <i class="fa fa-check-square-o fa-2x fa-check-square-not-all-conn" aria-hidden="true"></i>
+					     </div>
+					 </div>
 				</a></li>
 				{{/each}}
 			</ul>
 		</div>
 	</div>
-	
 </div>
-
