--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
          <div class="col-100">
          <div class="antenna"></div>
        </div>
-         <div class="col-100 col-100-big">
-         <div class="antenna antenna-big"></div>
+         <div class="col-100 ">
+         <div class="antenna "></div>
        </div>
        <div class="col-100">
          <div class="antenna"></div>
