--- a/map.html
+++ b/map.html
@@ -1,3 +1,12 @@
+ <div class="navbar navbar-custom" id="NavigationTabMap">
+				<div class="navbar-inner">
+					<div class="left">
+						<a href="#" class="link icon-only open-panel"> <i
+							class="icon icon-bars"></i></a>
+					</div>
+					<div class="center sliding"><img class="img-custom" src="dist/img/PIK_azzurro_small.png"></div>
+				</div>
+          </div>  
 <div class="page" data-page="mapPage">
 	<div class="page-content">
          <div id="mapDiv">
