--- a/settingList.html
+++ b/settingList.html
@@ -9,7 +9,7 @@
         <span>Back</span>
        </a>
     </div>
-    <div class="center sliding"><img src="key-icon.png"></div>
+    <div class="center sliding"><img id="img_settingDevice" src="key-icon.png"></div>
     <div class="right">
       <a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a>
     </div>
@@ -44,6 +44,7 @@
         </div>
       </div>
     </li>
+    calc
     </ul>
     </div>
       </div>
