--- a/home.html
+++ b/home.html
@@ -1,9 +1,21 @@
+ <div class="navbar navbar-custom" id="NavigationTabHome">
+				<div class="navbar-inner">
+					<div class="left">
+						<a href="#" class="link icon-only open-panel"> <i
+							class="icon icon-bars"></i></a>
+					</div>
+					<div class="center sliding"><img id="logoPick" class="img-custom" /> </div>
+					<div class="right">
+						<a href="#" class="link icon-only" id="add_deviceId" onclick="app.addNewDevice();">+</a>
+					</div>
+				</div>
+</div>  
 <div class="page" data-page="home" >
 <div class="page-content">
 	<div class="list-block list-block-custom">
-		<ul>
+		<ul>  
 		{{#each this.devices}}
-			<li class="swipeout" idDevice={{this.id}}><a href="about.html?item={{this.name}}&address={{this.address}}"
+			<li class="swipeout" idDevice={{this.id}}><a href="about.html?item={{this.name}}&address={{this.address}}&id={{this.id}}"
 				class="swipeout-content item-link item-content item-content-custom">
 					<div class="item-media">
 						  <img class="img-custom" src="data:image/jpeg;base64,{{this.image}}"/> 
@@ -17,7 +29,7 @@
 							{{/each}}
 						</div>
 					</div>
-			</a>
+			</a>   
 			<div class="swipeout-actions-right">
    					 <!-- Add this button and item will be deleted automatically -->
    				 <a href="#" class="swipeout-delete">Delete</a>
