Liste Ripristinate Home

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 						<div class="item-title item-title-custom">{{this.name}}</div>    
 						<div class="item-after">
 						    {{#each this.list}}
-							<div class="{{this.name}}"></div>  
+							<div class="{{this}}"></div>  
 							{{/each}}
 						</div>
 					</div>
