--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					</div>
 					<div class="center sliding"><img class="img-custom" src="dist/img/PIK_azzurro_small.png"></div>
 					<div class="right">
-						<a href="#" class="link icon-only" id="add_deviceId" onclick="alert('ciao');">+</a>
+						<a href="#" class="link icon-only" id="add_deviceId" onclick="app.addNewDevice();">+</a>
 					</div>
 				</div>          
           </div>  
