--- a/home.html
+++ b/home.html
@@ -1,21 +1,21 @@
- <div class="navbar navbar-custom" id="NavigationTabHome">
+ <div class="navbar" id="NavigationTabHome">
 				<div class="navbar-inner">
 					<div class="left">
 						<a href="#" class="link icon-only open-panel"> <i
 							class="icon icon-bars"></i></a>
 					</div>
-					<div class="center sliding"><img id="logoPick" class="img-custom" /> </div>
+					<div class="center sliding"><img id="logoPick" class="img-custom" src="dist/img/PIK_azzurro_small.png" /> </div>
 					<div class="right">
 						<a href="#" class="link icon-only" id="add_deviceId" onclick="app.addNewDevice();">+</a>
 					</div>
-				</div>
+				</div>  
 </div>  
 <div class="page" data-page="home" >
 <div class="page-content">
 	<div class="list-block list-block-custom">
 		<ul>  
 		{{#each this.devices}}
-			<li class="swipeout" idDevice={{this.id}}><a href="about.html?item={{this.name}}&address={{this.address}}&id={{this.id}}"
+			<li class="swipeout" idDevice={{this.id}}><a href="about.html?item={{this.name}}&address={{this.address}}&id={{this.id}}&safetymode={{this.safetymode}}"
 				class="swipeout-content item-link item-content item-content-custom">
 					<div class="item-media">
 						  <img class="img-custom" src="data:image/jpeg;base64,{{this.image}}"/> 
