--- a/settingDevice.html
+++ b/settingDevice.html
@@ -54,7 +54,7 @@
           <div class="item-title label">Alert Mode</div>
          <div class="item-input">
         <label class="label-switch">
-		    <input type="checkbox">
+		    <input type="checkbox" id="safetymode_id"  {{url_query.safetymode}} >  
 		    <div class="checkbox"></div>
 		  </label>  
          </div>
