--- a/listDetail.html
+++ b/listDetail.html
@@ -11,7 +11,7 @@
     <div class="right">
      <!--  <a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a> -->
       <a href="#" class="link open-picker">+</a>
-      <a href="settingList.html?listName=Informatica"><i class="fa fa-cog" aria-hidden="true"></i></a>
+      <a href="settingList.html?listName={{url_query.title}}&color={{url_query.color}}&id={{url_query.id}}"><i class="fa fa-cog" aria-hidden="true"></i></a>
     </div>
   </div>
 </div>
