--- a/list.html
+++ b/list.html
@@ -15,7 +15,7 @@
 		<div class="list-block list-block-custom">
 			<ul>
 		    {{#each this.lists}}
-				<li class="back{{this.color}}"><a href="listDetail.html?title={{this.name}}&id={{this.id}}&color={{this.color}}" data-context-name="devices" 
+				<li class="back{{this.color}}"><a href="listDetail.html?title={{this.name}}&id={{this.id}}&color={{this.color}}&id={{this.id}}" data-context-name="devices" 
 					class="item-link item-content item-content-custom pippop">
 						<div class="item-media">
 							<i class="icon icon-f7"></i>  
