--- a/newDevice.html
+++ b/newDevice.html
@@ -7,7 +7,7 @@
         <span>Back</span>
        </a>
     </div>
-    <div class="center sliding">{{url_query.title}}</div>
+    	<div class="center sliding"><img class="img-custom" src="dist/img/PIK_azzurro_small.png"></div>
   </div>
 </div>  
 
