--- a/settingDevice.html
+++ b/settingDevice.html
@@ -9,7 +9,11 @@
         <span>Back</span>
        </a>
     </div>
-    <div class="center sliding">Setting's Device</div>
+    <div class="center sliding">Setting &nbsp; &nbsp;   
+     <div class="divBattery">
+   		<i class="fa fa-battery-{{url_query.battery}} battery" aria-hidden="true"></i>
+    </div> 
+    </div>
     <div class="right">
       <a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a>
     </div>
@@ -21,7 +25,7 @@
 <!--  <div class="pages">-->
  <div class="page" data-page="DeviceOption" >
 <div class="page-content">
-    <div class="content-block">          
+    <div class="content-block">       
 <form id="OptionDevice" class="list-block">
   <ul>
     <!-- Text inputs -->
