--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
         <span>Back</span>
        </a>
     </div>
-    <div class="center sliding">&nbsp;&nbsp;{{url_query.item}}</div>
+    <div class="center sliding">{{url_query.item}}</div>
     <div class="right">
-      <a href="settingDevice.html?name={{url_query.item}}&id={{url_query.id}}&safetymode={{url_query.safetymode}}"><i class="fa fa-cog" aria-hidden="true"></i></a>
+      <a href="settingDevice.html?name={{url_query.item}}&id={{url_query.id}}&safetymode={{url_query.safetymode}}&battery={{url_query.battery}}"><i class="fa fa-cog" aria-hidden="true"></i></a>
       <a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a>
     </div>
   </div>    
