--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 					</div>
 					<div class="item-inner item-inner-custom">  
 					<span class="badge {{this.connected}}"></span>
-						<div class="item-title item-title-custom">{{this.name}}</div>    
+						<div class="item-title item-title-custom"><b>{{this.name}}</b></div>    
 						<div class="item-after">
 						    {{#each this.list}}
 							<div class="{{this}}"></div>  
