--- a/list.html
+++ b/list.html
@@ -21,7 +21,7 @@
 							<img class="img-custom" src="data:image/jpeg;base64,{{this.image}}"/> 
 						</div>  
 						<div class="item-inner">
-							<div class="item-title">{{this.name}}</div>
+							<div class="item-title"><b>{{this.name}}</b></div>
 						<div class="item-after-custom item-after-custom listLi" id="{{this.id}}">
 								 <i class="fa fa-check-square-o fa-2x fa-check-square-not-all-conn" aria-hidden="true"></i>
 					     </div>
