--- a/newDevice.html
+++ b/newDevice.html
@@ -1,5 +1,5 @@
 <div class="pages navbar-through toolbar-through">
-<div class="navbar">
+<div class="navbar" id="navbar_newDevice">
   <div class="navbar-inner">
     <div class="left">
       <a href="#" class="back link"> 
