--- a/newList.html
+++ b/newList.html
@@ -1,12 +1,17 @@
-<div class="navbar navbar-custom" id="NavigationTabList">
-				<div class="navbar-inner">
-					<div class="left">
-						<a href="#" class="link icon-only open-panel"> <i
-							class="icon icon-bars"></i></a>
-					</div>
-					<div class="center sliding"><img class="img-custom" src="dist/img/PIK_azzurro_small.png"></div>
-				</div>
-  </div>  
+<div class="navbar">
+  <div class="navbar-inner">
+    <div class="left">
+      <a href="#" class="back link"> 
+        <i class="icon icon-back"></i>
+        <span>Back</span>
+       </a>
+    </div>
+    <div class="center sliding"><img id="logoPick" class="img-custom" src="dist/img/PIK_azzurro_small.png" /> </div>
+    <div class="right">
+      <a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a>
+    </div>
+  </div>    
+</div>  
 <div class="page" data-page="newList" >
 <div class="page-content">
     <div class="content-block">          
