--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
     </li>
      <li>
       <div class="item-content">
-        <div class="item-media"><i class="fa fa-graduation-cap" aria-hidden="true"></i></div>
+        <div class="item-media"><i class="fa fa-sign-out" aria-hidden="true"></i></div>
         <div class="item-inner item-inner-custom">
-          <div class="item-title item-title-custom label">Tutorial</div>
+          <div class="item-title item-title-custom label" id="logout_id">Logout</div>
           <!--  <div class="item-input">
             <input type="email" placeholder="E-mail">
           </div>-->
