--- a/newList.html
+++ b/newList.html
@@ -44,7 +44,7 @@
           <div class="item-title label">Image</div>
          <div class="item-input">
         <p class="buttons-row">
-			  <a href="#" class="button">Icon</a>
+			  <a href="#" class="button" id="btn_iconId">Icon</a>
 			  <a href="#" class="button" id="btn_photoListid">Photo</a>
 		</p>
          </div>
