--- a/newDeviceOption.html
+++ b/newDeviceOption.html
@@ -21,7 +21,7 @@
           <div class="item-title label">Image</div>
          <div class="item-input">
         <p class="buttons-row">
-			  <a href="#" class="button">Icon</a>
+			  <a href="#" class="button" id="bnt_iconId_newDevice">Icon</a>
 			  <a href="#" class="button" id="btn_photoid">Photo</a>
 		</p>
          </div>
