--- a/settingDevice.html
+++ b/settingDevice.html
@@ -45,7 +45,7 @@
           <div class="item-title label">Image</div>
          <div class="item-input">
          <p class="buttons-row">
-			  <a href="#" class="button">Icon</a>
+			  <a href="#" class="button" id="btn_settingDevice">Icon</a>
 			  <a href="#" class="button" id="btn_photoid">Photo</a>
 		</p>  
          </div>
