--- a/newDevice.html
+++ b/newDevice.html
@@ -14,8 +14,8 @@
 <div class="page" data-page="newDevice" >
 
 <div class="page-content">  
-    <div class="content-block-title">Inset</div>  
-    <!-- Inset content block -->
+    <div class="content-block-title"></div>  
+    <!-- Inset content block -->       
     <div class="content-block inset">  
       <div class="content-block-inner">
         <p>Hold the button on the iTrack device until you hear a beep and the LED start flashing</p>
