--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        <div class="page" data-page="loginPage">
         <div class="page-content login-screen-content">
           <div class="login-screen-title">
-          <img src="dist/img/PIK_azzurro_small.png">     
+          <img src="pick_icon_hr.png">     
           </div>
           <form id="loginForm">
             <div class="list-block">
@@ -131,14 +131,27 @@
         </div>
       </div>
     </li>
+    <li>
+      <div class="item-content">
+        <div class="item-media"><i class="fa fa-question-circle" aria-hidden="true"></i></div>
+        <div class="item-inner item-inner-custom">
+          <div class="item-title item-title-custom label">Info</div>
+        </div>
+      </div>
+    </li>  
+     <li>
+      <div class="item-content">
+        <div class="item-media"><i class="fa fa-shopping-cart" aria-hidden="true"></i></div>
+        <div class="item-inner item-inner-custom">
+          <div class="item-title item-title-custom label">Compra Ora</div>
+        </div>
+      </div>
+    </li>
      <li>
       <div class="item-content">
         <div class="item-media"><i class="fa fa-sign-out" aria-hidden="true"></i></div>
         <div class="item-inner item-inner-custom">
           <div class="item-title item-title-custom label" id="logout_id">Logout</div>
-          <!--  <div class="item-input">
-            <input type="email" placeholder="E-mail">
-          </div>-->
         </div>
       </div>
     </li>
@@ -252,7 +265,7 @@
 <script type="text/javascript" src="dist/js/framework7.min.js"></script>  
 
 <!--	<script type="text/javascript" src="dist/js/my-app.js"></script> -->      
-<script src="libs/evothings/easyble/easyble.dist.js"></script>           
+<script src="libs/evothings/easyble/easyble.dist.js"></script>       
 <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf3Y04zoL9Ol86M-tSQ3rwezjn314ioX8" async defer></script>
 <script type="text/javascript" src="dist/js/app.js"></script>                
