--- a/newDevice.html
+++ b/newDevice.html
@@ -10,17 +10,17 @@
     	<div class="center sliding"><img class="img-custom" src="dist/img/PIK_azzurro_small.png"></div>
   </div>
 </div>  
-
+  
 <div class="page" data-page="newDevice" >
 
 <div class="page-content">  
-    <div class="content-block-title"></div>  
     <!-- Inset content block -->       
     <div class="content-block inset">  
       <div class="content-block-inner">
         <p>Hold the button on the iTrack device until you hear a beep and the LED start flashing</p>
       </div>
-    </div>
+      <img id="gif_search" src="search.gif"/>
+    </div>  
 </div>
 </div>
 
