--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 	<div class="list-block list-block-custom">
 		<ul>  
 	  	 {{#each this.devices}}
-			<li class="swipeout swipeDevice" idDevice={{this.id}}><a href="about{{this.connected}}.html?item={{this.name}}&address={{this.address}}&id={{this.id}}&safetymode={{this.safetymode}}&battery={{this.battery}}"
+			<li class="swipeout swipeDevice" idDevice={{this.id}}><a href="about{{this.connected}}.html?item={{this.name}}&address={{this.address}}&id={{this.id}}&safetymode={{this.safetymode}}&battery={{this.battery}}&battPerc={{this.battPerc}}"
 				class="swipeout-content item-link item-content item-content-custom">
 					<div class="item-media">
 						  <img class="img-custom" src="data:image/jpeg;base64,{{this.image}}"/> 
