--- a/settingDevice.html
+++ b/settingDevice.html
@@ -11,7 +11,7 @@
     </div>
     <div class="center sliding">Setting &nbsp; &nbsp;   
      <div class="divBattery">
-   		<i class="fa fa-battery-{{url_query.battery}} battery" aria-hidden="true"></i>&nbsp;&nbsp;{{url_query.battPerc}}%
+   		<i class="fa fa-battery-{{url_query.battery}} battery" aria-hidden="true"></i>&nbsp;&nbsp;{{url_query.battPerc}}
     </div> 
     </div>
     <div class="right">
