--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script src="libs/evothings/evothings.js"></script>   
 <script src="libs/evothings/ui/ui.js"></script>
 <script src="libs/jquery/jquery.js"></script>  
-<script src="libs/jquery/jquery.validate.js"></script>  
+<!--  <script src="libs/jquery/jquery.validate.js"></script>  -->
 </head>
 <body>
      <div class="login-screen">
