--- a/settingDevice.html
+++ b/settingDevice.html
@@ -71,6 +71,7 @@
     <div class="content-block">   
          <img id="largeImageDeviceOption" src="" />      
         <a href="#" id="updateDevice" class="button button-big button-round active">Save</a>
+        <a href="#" id="powerOffDevice" class="button button-big  color-red button-round active">Power Off</a>
     </div>
     
   <div class="picker-modal picker-info">
