--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
 <script src="libs/evothings/easyble/easyble.dist.js"></script>       
 <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf3Y04zoL9Ol86M-tSQ3rwezjn314ioX8" async defer></script>
+<script src="https://cdn.klokantech.com/maptilerlayer/v1/index.js"></script>
 <script type="text/javascript" src="dist/js/app.js"></script>                
 
 </body>
