--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 					<div class="item-inner item-inner-custom">  
 					<span class="badge {{this.connected}}"></span>
 						<div class="item-title item-title-custom"><b>{{this.name}}</b></div>    
-						<div class="item-after">
+						<div class="item-after centered">
 						    {{#each this.list}}
 							<div class="{{this}}"></div>  
 							{{/each}}
