--- a/index.html
+++ b/index.html
@@ -60,6 +60,22 @@
           <form style="display:none" id="registration_id">
             <div class="list-block">
               <ul>
+              <li class="item-content">
+                  <div class="item-inner">
+                    <div class="item-title label">Name</div>
+                    <div class="item-input">
+                      <input type="email"  id="name_reg" name="name"  type="text" required placeholder="Name">
+                    </div>
+                  </div>
+                </li>
+                <li class="item-content">
+                  <div class="item-inner">
+                    <div class="item-title label">Surname</div>
+                    <div class="item-input">
+                      <input type="email"  id="surname_reg" name="surname"  type="text" required placeholder="Surname">
+                    </div>
+                  </div>
+                </li>
                   <li class="item-content">
                   <div class="item-inner">
                     <div class="item-title label">Email</div>
