--- a/settingDevice.html
+++ b/settingDevice.html
@@ -59,7 +59,7 @@
          <div class="item-input">
         <label class="label-switch">
 		    <input type="checkbox" id="safetymode_id"  {{url_query.safetymode}} >  
-		    <div class="checkbox"></div>
+		    <div class="checkbox" id="alertMode_id"></div>
 		  </label>  
          </div>
         </div>
