--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 						<div class="item-title item-title-custom"><b>{{this.name}}</b></div>    
 						<div class="item-after centered">
 						    {{#each this.list}}
-							<div class="{{this}}"></div>  
+							<div class="emptyList {{this}}"></div>  
 							{{/each}}
 						</div>
 					</div>
