--- a/newDevice.html
+++ b/newDevice.html
@@ -17,7 +17,7 @@
     <!-- Inset content block -->       
     <div class="content-block inset">  
       <div class="content-block-inner">
-        <p>Hold the button on the iTrack device until you hear a beep and the LED start flashing</p>
+        <p>Hold the button on your Pik device until you hear a beep and the LED starts flashing.</p>
       </div>
       <img id="gif_search" src="search.gif"/>
     </div>  
