--- a/newDeviceOption.html
+++ b/newDeviceOption.html
@@ -10,7 +10,7 @@
         <div class="item-inner">
           <div class="item-title label">Name</div>
           <div class="item-input">
-            <input type="text" id="namePick_id"  name ="name" placeholder="Pick's Name">
+            <input type="text" id="namePick_id"  name ="name" placeholder="Pik's Name">
           </div>
         </div>
       </div>
