--- a/settingDevice.html
+++ b/settingDevice.html
@@ -58,7 +58,7 @@
           <div class="item-title label">Alert Mode</div>
          <div class="item-input">
          <label class="label-switch">
-		    <input type="checkbox" id="safetymode_id"  {{url_query.safetymode}} >  
+		    <input type="checkbox" id="safetymode_id"  name="safety" {{url_query.safetymode}} >  
 		    <div class="checkbox" id="alertMode_id"></div>
 		  </label>  
          </div>
