--- a/index.html
+++ b/index.html
@@ -303,7 +303,9 @@
 
 <!--	<script type="text/javascript" src="dist/js/my-app.js"></script> -->      
 <script src="libs/evothings/easyble/easyble.dist.js"></script>       
-<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+<script type="text/javascript">
+import "setMarker/src/geolocation-marker.js"
+</script>  
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBf3Y04zoL9Ol86M-tSQ3rwezjn314ioX8" async defer></script>
 <script type="text/javascript" src="dist/js/app.js"></script>                
 
